--- a/MineOS/Languages/Russian.lang
+++ b/MineOS/Languages/Russian.lang
@@ -10,3 +10,16 @@ shutdown = Выключить
 restart = Перезагрузить
 backToShell = Вернуться в Shell
 updateSystem = Обновления
+contextShowContent = Показать содержимое
+contextCut = Вырезать
+contextCopy = Копировать
+contextPaste = Вставить
+contextRename = Переименовать
+contextCreateShortcut = Создать ярлык
+contextArchive = Добавить в архив
+contextUploadToPastebin = Загрузить на Pastebin
+contextAddToDock = Добавить в Dock
+contextDelete = Удалить
+contextOpenDockFolder = Открыть папку Dock
+contextOpenDockElementFolder = Открыть содержащую папку
+contextRemoveFromDock = Удалить из Dock
