--- a/MineOS/Languages/English.lang
+++ b/MineOS/Languages/English.lang
@@ -10,3 +10,16 @@ shutdown = Shutdown
 restart = Restart
 backToShell = Return to Shell
 updateSystem = Update
+contextShowContent = Show package content
+contextCut = Cut
+contextCopy = Copy
+contextPaste = Paste
+contextRename = Rename
+contextCreateShortcut = Create shortcut
+contextArchive = Add to archive
+contextUploadToPastebin = Upload to Pastebin
+contextAddToDock = Add to Dock
+contextDelete = Delete
+contextOpenDockFolder = Open Dock folder
+contextOpenDockElementFolder = Open this file's folder
+contextRemoveFromDock = Remove from Dock
