--- a/MineOS/Configurator/Russian.lang
+++ b/MineOS/Configurator/Russian.lang
@@ -11,3 +11,4 @@ enterPassword = Введите пароль
 confirmPassword = Подтвердите пароль
 hereIsExample = Пример кода выше.
 beginOSUsage = Начать использование ОС
+changeText = Изменить текст
