--- a/MineOS/Configurator/Russian.lang
+++ b/MineOS/Configurator/Russian.lang
@@ -12,3 +12,4 @@ confirmPassword = Подтвердите пароль
 hereIsExample = Пример кода выше.
 beginOSUsage = Начать использование ОС
 changeText = Изменить текст
+changeBack = Изменить фон
