--- a/MineOS/Languages/Russian.lang
+++ b/MineOS/Languages/Russian.lang
@@ -24,3 +24,6 @@ contextDelete = Удалить
 contextOpenDockFolder = Открыть папку Dock
 contextOpenDockElementFolder = Открыть содержащую папку
 contextRemoveFromDock = Удалить из Dock
+contextNewFile = Новый файл
+contextNewFolder = Новая папка
+contextRunFromPastebin = Запустить из Pastebin
