--- a/MineOS/Languages/Russian.lang
+++ b/MineOS/Languages/Russian.lang
@@ -1,4 +1,5 @@
 viewTab = Вид
+name = Имя
 showSystemFiles = Показывать системные файлы
 hideSystemFiles = Скрывать системные файлы
 showHiddenFiles = Показывать скрыте файлы
