--- a/MineOS/Languages/English.lang
+++ b/MineOS/Languages/English.lang
@@ -1,5 +1,5 @@
 viewTab = View
-name = Name
+name = Enter name
 showSystemFiles = Show system files
 hideSystemFiles = Hide system files
 showHiddenFiles = Show hidden files
