--- a/MineOS/Languages/Russian.lang
+++ b/MineOS/Languages/Russian.lang
@@ -35,3 +35,4 @@ contextRemoveFromDock = Удалить из Dock
 contextNewFile = Новый файл
 contextNewFolder = Новая папка
 contextRunFromPastebin = Запустить из Pastebin
+contextCreatePastebinShortcut = Создать ссылку на файл из Pastebin
