--- a/MineOS/Languages/Russian.lang
+++ b/MineOS/Languages/Russian.lang
@@ -1,6 +1,7 @@
 viewTab = Вид
 updatesAvailable = Доступны обновления ОС!
 name = Введите имя
+invalidName = Имя введено некоректно.
 enterSystem = Войти в систему
 password = Пароль
 fingerToLogin = Прислоните палец для идентификации.
