--- a/MineOS/Languages/Russian.lang
+++ b/MineOS/Languages/Russian.lang
@@ -1,5 +1,6 @@
 viewTab = Вид
 updatesAvailable = Доступны обновления ОС!
+badShortcut = Ярлык ссылается на несуществующий файл!
 name = Введите имя
 invalidName = Имя введено некоректно.
 enterSystem = Войти в систему
