--- a/MineOS/Whats-new/Russian.lang
+++ b/MineOS/Whats-new/Russian.lang
@@ -1,4 +1,14 @@
-Version 0.1
+Version 0.2
+● Добавлен новый формат изображений .JPG - по сути
+  это ультра-сжатие без потери качества.
+● Оптимизированы графические алгоритмы отрисовки
+  изображений. Теперь отрисовка в 1.5 раза быстрее.
+● Добавлена поддержка новых форматов изображения
+  в ОС и использующие их программы.
+● Ре-дизайн окон программы Photoshop.
+● Добавлена возможность создания прямых ссылок на
+  Pastebin. Двойной клик запускает программу с
+  сайта напрямую.
 ● Добавлена система оповещений
 ● Добавленая полная поддержка сторонних языков.
 ● Добавлено создание файлов/папок из контекстного меню
