--- a/MineOS/Whats-new/English.lang
+++ b/MineOS/Whats-new/English.lang
@@ -1,4 +1,14 @@
-Version 0.1
+Version 0.2
+● Added a new image format .JPG - actually,
+  this is ultra-lossless compression.
+● Optimized graphics rendering algorithms for
+  images. Now drawing is up to 1.5 times faster.
+● Added support for new image formats for
+  OS and other program.
+● Re-design of the windows in Photoshop.
+● Added ability to create direct links to
+  Pastebin. Double-click on it downloads and
+  executes script directly.
 ● Added notification system.
 ● Added language packages support.
 ● Added feature to create files/folders from
