--- a/MineOS/Whats-new/English.lang
+++ b/MineOS/Whats-new/English.lang
@@ -1,6 +1,6 @@
 Version 0.2
-● Added a new image format .JPG - actually,
-  this is ultra-lossless compression.
+● Added a new image format .JPG - it uses
+  ultra-lossless compression.
 ● Optimized graphics rendering algorithms for
   images. Now drawing is up to 1.5 times faster.
 ● Added support for new image formats for
