--- a/Applications/HoloEdit/English.lang
+++ b/Applications/HoloEdit/English.lang
@@ -1,1 +1,23 @@
-afaf
+badGPU = [ERROR] Your monitor/GPU doesn't support required resolution.
+palette = [ Palette ]
+control = [ Control ]
+quit = Exit: 'Q' or 
+programmers =  Developers:               
+contact = Contact
+savingFile = Saving file...
+loadingFile = Loading file...
+attention = [ Attention ]
+complete = [ Done! ]
+exit = Quit
+refresh = Refresh
+fromUp = Up view
+fromFront = Front view
+fromSide = Side view
+upper = Upper
+lower = Lower
+clear = Clear
+fill = Fill
+toProjector = To projector
+save = Save
+load = Load
+new = New file
