--- a/Applications/HoloEdit/Russian.lang
+++ b/Applications/HoloEdit/Russian.lang
@@ -1,13 +1,16 @@
-badGPU = [ERROR] Your monitor/GPU doesn't support required resolution.
-palette = [ Palette ]
-control = [ Control ]
-quit = Exit: 'Q' or 
-programmers =  Developers:               
-contact = Contact
-savingFile = Saving file...
-loadingFile = Loading file...
-attention = [ Attention ]
-complete = [ Done! ]
+badGPU = [ОШИБКА] Ваш монитор/видеокарта не поддерживает требуемое разрешение.
+palette = [ Палитра ]
+control = [ Управление ]
+layer = [ Слой ]
+level = Уровень голограммы:
+mainLevel = Направляющий уровень:
+quit = Выход: 'Q' или 
+programmers =  Разработчики:               
+contact = Контакты:
+savingFile = Сохраняю файл...
+loadingFile = Загружаю файл...
+attention = [ Внимание ]
+complete = [   Файл сохранен!  ]
 exit = Quit
 refresh = Refresh
 fromUp = Up view
@@ -21,4 +24,3 @@ toProjector = To projector
 save = Save
 load = Load
 new = New file
-
