--- a/Applications/HoloEdit/Russian.lang
+++ b/Applications/HoloEdit/Russian.lang
@@ -11,16 +11,17 @@ savingFile = Сохраняю файл...
 loadingFile = Загружаю файл...
 attention = [ Внимание ]
 complete = [   Файл сохранен!  ]
-exit = Quit
-refresh = Refresh
-fromUp = Up view
-fromFront = Front view
-fromSide = Side view
-upper = Upper
-lower = Lower
-clear = Clear
-fill = Fill
-toProjector = To projector
-save = Save
-load = Load
-new = New file
+exit = Выход
+refresh = Обновить
+fromUp = Сверху
+fromFront = Спереди
+fromSide = Сбоку
+upper = Выше
+lower = Ниже
+clear = Очистить
+fill = Залить
+toProjector = На проектор
+save = Сохранить
+load = Загрузить
+new = Новый файл
+enterFileName = Введите сюда имя файла
