--- a/Applications/HoloEdit/English.lang
+++ b/Applications/HoloEdit/English.lang
@@ -9,7 +9,7 @@ contact = Contact
 savingFile = Saving file...
 loadingFile = Loading file...
 attention = [ Attention ]
-complete = [ Done! ]
+complete = [   Done!  ]
 exit = Quit
 refresh = Refresh
 fromUp = Up view
@@ -23,3 +23,4 @@ toProjector = To projector
 save = Save
 load = Load
 new = New file
+enterFileName = Введите сюда имя файла
