--- a/Applications/HoloEdit/English.lang
+++ b/Applications/HoloEdit/English.lang
@@ -1,6 +1,7 @@
 badGPU = [ERROR] Your monitor/GPU doesn't support required resolution.
 palette = [ Palette ]
 control = [ Control ]
+layer = [ Layer ]
 level = Hologram level:
 mainLevel = Main level:
 quit = Exit: 'Q' or 
