--- a/Applications/HoloEdit/Russian.lang
+++ b/Applications/HoloEdit/Russian.lang
@@ -5,7 +5,7 @@ layer = [ Слой ]
 level = Уровень голограммы:
 mainLevel = Направляющий уровень:
 quit = Выход: 'Q' или 
-programmers =  Разработчики:               
+developers =  Разработчики:               
 contact = Контакты:
 savingFile = Сохраняю файл...
 loadingFile = Загружаю файл...
