--- a/Applications/HoloEdit/English.lang
+++ b/Applications/HoloEdit/English.lang
@@ -5,7 +5,7 @@ layer = [ Layer ]
 level = Hologram level:
 mainLevel = Main level:
 quit = Exit: 'Q' or 
-programmers =  Developers:               
+developers =  Developers:               
 contact = Contact
 savingFile = Saving file...
 loadingFile = Loading file...
