--- a/Applications/HoloEdit/English.lang
+++ b/Applications/HoloEdit/English.lang
@@ -13,9 +13,9 @@ attention = [ Attention ]
 complete = [   Done!  ]
 exit = Quit
 refresh = Refresh
-fromUp = Up view
-fromFront = Front view
-fromSide = Side view
+fromUp = Top
+fromFront = Front
+fromSide = Side
 upper = Upper
 lower = Lower
 clear = Clear
@@ -24,4 +24,4 @@ toProjector = To projector
 save = Save
 load = Load
 new = New file
-enterFileName = Введите сюда имя файла
+enterFileName = Enter file name here:
