--- a/MineOS/Languages/English.lang
+++ b/MineOS/Languages/English.lang
@@ -1,41 +1,46 @@
-viewTab = View
-updatesAvailable = New updates for OS available!
-badShortcut = Shortcut refers to nonexistent file!
-programSuccessfullyExecuted = Programm sucessfully executed. Press any key to continue.
-name = Enter name
-invalidName = Invalid name.
-enterSystem = Login to system
-password = Password
-fingerToLogin = Press finger here to ident yourself.
-welcomeBack = Welcome back, 
-accessDenied = Access denied!
-pressAnyKeyToContinue = Press any key to continue.
-showSystemFiles = Show system files
-hideSystemFiles = Hide system files
-showHiddenFiles = Show hidden files
-hideHiddenFiles = Hide hidden files
-showFileFormat = Show file format
-hideFileFormat = Hide file format
-aboutSystem = About OS
-shutdown = Shutdown
-restart = Restart
-backToShell = Return to Shell
-updateSystem = Update
-contextShowContent = Show package content
-contextEdit = Edit
-contextCut = Cut
-contextCopy = Copy
-contextPaste = Paste
-contextRename = Rename
-contextCreateShortcut = Create shortcut
-contextArchive = Add to archive
-contextUploadToPastebin = Upload to Pastebin
-contextAddToDock = Add to Dock
-contextDelete = Delete
-contextOpenDockFolder = Open Dock folder
-contextOpenDockElementFolder = Open this file's folder
-contextRemoveFromDock = Remove from Dock
-contextNewFile = New file
-contextNewFolder = New folder
-contextRunFromPastebin = Run from Pastebin
-contextCreatePastebinShortcut = Create link to Pastebin file
+{
+	contextMenuNewFile = "New file",
+	contextMenuNewFolder = "New folder",
+	contextMenuNewApplication = "New MineOS application",
+	contextMenuPaste = "Paste",
+	contextMenuCopy = "Copy",
+	contextMenuCut = "Cut",
+	contextMenuRemoveWallpaper = "Remove wallpaper",
+	contextMenuEdit = "Edit",
+	contextMenuEditInPhotoshop = "Edit in Photoshop",
+	contextMenuRename = "Rename",
+	contextMenuCreateShortcut = "Create shortcut",
+	contextMenuUploadToPastebin = "Upload to Pastebin",
+	contextMenuAddToDock = "Add to Dock",
+	contextMenuRemoveFromDock = "Remove from Dock",
+	contextMenuArchive = "Add to archive",
+	contextMenuDelete = "Delete",
+	contextMenuAddToFavourites = "Add to favourites",
+	contextMenuCreateApplication = "Create MineOS application",
+	contextMenuSetAsWallpaper = "Set as wallpaper",
+	contextMenuShowPackageContent = "Show package content",
+	contextMenuShowContainingFolder = "Show containing folder",
+	contextMenuRemoveFromFavourites = "Remove from favourites",
+
+	sortByType = "Sort by type",
+	sortByName = "Sort by name",
+	sortByDate = "Sort by date",
+	showFileFormat = "Show file format",
+	hideFileFormat = "Hide file format",
+	showHiddenFiles = "Show hidden files",
+	hideHiddenFiles = "Hide hidden files",
+
+	sortByTypeShort = "By type",
+	sortByNameShort = "By name",
+	sortByDateShort = "By date",
+	showFileFormatShort = "Format",
+	showHiddenFilesShort = "Hidden",
+
+	aboutSystem = "About this PC",
+	updates = "Updates",
+	shutdown = "Shutdown",
+	reboot = "Reboot",
+	returnToShell = "Return to Shell",
+
+	viewTab = "View",
+}
