--- a/MineOS/Languages/Russian.lang
+++ b/MineOS/Languages/Russian.lang
@@ -1,41 +1,46 @@
-viewTab = Вид
-updatesAvailable = Доступны обновления ОС!
-badShortcut = Ярлык ссылается на несуществующий файл!
-programSuccessfullyExecuted = Программа выполнена успешно! Нажмите любую клавишу, чтобы продолжить.
-name = Введите имя
-invalidName = Имя введено некоректно.
-enterSystem = Войти в систему
-password = Пароль
-fingerToLogin = Прислоните палец для идентификации.
-welcomeBack = С возвращением, 
-accessDenied = Доступ запрещен!
-pressAnyKeyToContinue = Нажмите любую клавишу чтобы продолжить
-showSystemFiles = Показывать системные файлы
-hideSystemFiles = Скрывать системные файлы
-showHiddenFiles = Показывать скрыте файлы
-hideHiddenFiles = Скрывать скрытые файлы
-showFileFormat = Показывать формат файлов
-hideFileFormat = Скрывать формат файлов
-aboutSystem = О системе
-shutdown = Выключить
-restart = Перезагрузить
-backToShell = Вернуться в Shell
-updateSystem = Обновления
-contextShowContent = Показать содержимое
-contextEdit = Редактировать
-contextCut = Вырезать
-contextCopy = Копировать
-contextPaste = Вставить
-contextRename = Переименовать
-contextCreateShortcut = Создать ярлык
-contextArchive = Добавить в архив
-contextUploadToPastebin = Загрузить на Pastebin
-contextAddToDock = Добавить в Dock
-contextDelete = Удалить
-contextOpenDockFolder = Открыть папку Dock
-contextOpenDockElementFolder = Открыть содержащую папку
-contextRemoveFromDock = Удалить из Dock
-contextNewFile = Новый файл
-contextNewFolder = Новая папка
-contextRunFromPastebin = Запустить из Pastebin
-contextCreatePastebinShortcut = Создать ссылку на Pastebin
+{
+	contextMenuNewFile = "Новый файл",
+	contextMenuNewFolder = "Новая папка",
+	contextMenuNewApplication = "Новое приложение MineOS",
+	contextMenuPaste = "Вставить",
+	contextMenuCopy = "Копировать",
+	contextMenuCut = "Вырезать",
+	contextMenuRemoveWallpaper = "Удалить обои",
+	contextMenuEdit = "Редактировать",
+	contextMenuEditInPhotoshop = "Редактировать в Photoshop",
+	contextMenuRename = "Переименовать",
+	contextMenuCreateShortcut = "Создать ярлык",
+	contextMenuUploadToPastebin = "Загрузить на Pastebin",
+	contextMenuAddToDock = "Добавит в Dock",
+	contextMenuRemoveFromDock = "Удалить из Dock",
+	contextMenuArchive = "Добавить в архив",
+	contextMenuDelete = "Удалить",
+	contextMenuAddToFavourites = "Добавить в избранное",
+	contextMenuCreateApplication = "Создать приложение MineOS",
+	contextMenuSetAsWallpaper = "Установить как обои",
+	contextMenuShowPackageContent = "Показать содержимое пакета",
+	contextMenuShowContainingFolder = "Показать содержащую папку",
+	contextMenuRemoveFromFavourites = "Удалить из избранного",
+
+	sortByType = "Сортировать по типу",
+	sortByName = "Сортировать по имени",
+	sortByDate = "Сортировать по дате",
+	showFileFormat = "Показывать формат файлов",
+	hideFileFormat = "Скрывать формат файлов",
+	showHiddenFiles = "Показывать скрытые файлы",
+	hideHiddenFiles = "Скрывать скрытые файлы",
+
+	sortByTypeShort = "По типу",
+	sortByNameShort = "По имени",
+	sortByDateShort = "По дате",
+	showFileFormatShort = "Формат",
+	showHiddenFilesShort = "Скрытые",
+
+	aboutSystem = "Об этом ПК",
+	updates = "Обновления",
+	shutdown = "Выключить",
+	reboot = "Перезагрузить",
+	returnToShell = "Вернуться в Shell",
+
+	viewTab = "Вид",
+}
