Ебать, обнова ОСи, много фич новых
1) Добавлена система авторизации по отпечатку пальца
3) Добавлена возможность изменения метода авторизации
4) Добавлена возможность разлогина
4) Добавлена возможность изменения масштаба ОСи
5) Добавлена возможность изменения цветовой схемы ОСи

--- a/MineOS/Languages/English.lang
+++ b/MineOS/Languages/English.lang
@@ -39,17 +39,39 @@
 	aboutSystem = "About this PC",
 	updates = "Updates",
 	shutdown = "Shutdown",
+	logout = "Logout",
 	reboot = "Reboot",
 	returnToShell = "Return to Shell",
 
-	protectYourComputer = "Protect your computer",
+	protectYourComputer = "Computer protection",
 	inputPassword = "Input password",
 	confirmInputPassword = "Confirm password",
-	withoutProtection = "No protection",
-	passwordsAreDifferent = "Passwords are different!",
+	oldPassword = "Old password",
+	newPassword = "New password",
+	setProtectionMethod = "Change computer protection method",
+	wrongOldPassword = "Wrong old password!",
+	passwordSucessfullyChanged = "Password have been successfully changed!",
+	withoutProtection = "Without protection",
+	passwordProtection = "Password protection",
+	biometricProtection = "Biometric protection",
+	putFingerToVerify = "Put your finger to authorization",
+	putFingerToRegister = "Put your finger to create biometric signature",
+	fingerprintCreated = "Biometric signature has been created",
+	accessDenied = "Access denied",
+	welcomeBack = "Welcome, ",
+	passwordsAreDifferent = "Passwords are different",
 	incorrectPassword = "Incorrect password",
 	mineOSCreatorUsedMasterPassword = "The creator of this operating system have used Master-Password",
 	loginToSystem = "Login",
+
+	colorScheme = "Color scheme",
+	backgroundColor = "Background color",
+	interfaceColor = "Interface color",
+	selectionColor = "Selection color",
+	screenResolution = "Screen resolution",
+	settings = "Preferences",
+	changePassword = "Change password",
+	cancel = "Отмена",
 
 	viewTab = "View",
 }
