--- a/MineOS/Languages/Russian.lang
+++ b/MineOS/Languages/Russian.lang
@@ -39,17 +39,39 @@
 	aboutSystem = "Об этом ПК",
 	updates = "Обновления",
 	shutdown = "Выключить",
+	logout = "Разлогиниться",
 	reboot = "Перезагрузить",
 	returnToShell = "Вернуться в Shell",
 
-	protectYourComputer = "Защитите ваш компьютер",
+	protectYourComputer = "Защита компьютера",
 	inputPassword = "Введите пароль",
 	confirmInputPassword = "Подтвердите пароль",
+	oldPassword = "Старый пароль",
+	newPassword = "Новый пароль",
+	setProtectionMethod = "Изменить метод защиты компьютера",
+	wrongOldPassword = "Неверный старый пароль",
+	passwordSucessfullyChanged = "Пароль успешно изменен!",
 	withoutProtection = "Без защиты",
+	passwordProtection = "Защита паролем",
+	biometricProtection = "Биометрическая",
+	putFingerToVerify = "Приложите палец для авторизации",
+	putFingerToRegister = "Приложите палец для создания биометрического снимка",
+	fingerprintCreated = "Биометрический снимок создан",
+	accessDenied = "Доступ запрещен",
+	welcomeBack = "Добро пожаловать, ",
 	passwordsAreDifferent = "Пароли различаются",
 	incorrectPassword = "Неверный пароль",
 	mineOSCreatorUsedMasterPassword = "Создатель операционной системы использовал Мастер-Пароль",
 	loginToSystem = "Вход в систему",
+
+	colorScheme = "Цветовая схема",
+	backgroundColor = "Цвет фона",
+	interfaceColor = "Цвет интерфейса",
+	selectionColor = "Цвет выделения",
+	screenResolution = "Разрешение экрана",
+	settings = "Настройки",
+	changePassword = "Изменить пароль",
+	cancel = "Отмена",
 
 	viewTab = "Вид",
 }
