--- a/MineOS/Languages/Russian.lang
+++ b/MineOS/Languages/Russian.lang
@@ -81,6 +81,7 @@
 
 	viewTab = "Вид",
 
+	errorWhileRunningProgram = "Ошибка при выполнении программы: ",
 	fileDoesntExists = "Файл не существует",
 	fileSuccessfullySent = "Файл успешно отправлен",
 	sendFile = "Отправить файл",
