--- a/Installer/Russian.lang
+++ b/Installer/Russian.lang
@@ -1,6 +1,8 @@
-beginOsInstall = Чтобы начать установку ОС, нажмите далее
-acceptLicense = Принимаю
-osInstallation = Установка ОС
-downloading = Загрузка
-needToRestart = Система установлена, необходима перезагрузка
-restart = Перезагрузить
+{
+	beginOsInstall = "Чтобы начать установку ОС, нажмите далее",
+	acceptLicense = "Принимаю",
+	osInstallation = "Установка ОС",
+	downloading = "Загрузка",
+	needToRestart = "Система установлена, необходима перезагрузка",
+	restart = "Перезагрузить",
+}
