--- a/MineOS/Languages/Russian.lang
+++ b/MineOS/Languages/Russian.lang
@@ -13,13 +13,15 @@
 	contextMenuUploadToPastebin = "Загрузить на Pastebin",
 	contextMenuAddToDock = "Добавить в Dock",
 	contextMenuRemoveFromDock = "Удалить из Dock",
+	contextMenuMoveRight = "Передвинуть правее",
+	contextMenuMoveLeft = "Передвинуть левее",
 	contextMenuArchive = "Добавить в архив",
 	contextMenuDelete = "Удалить",
 	contextMenuAddToFavourites = "Добавить в избранное",
 	contextMenuCreateApplication = "Создать приложение MineOS",
 	contextMenuSetAsWallpaper = "Установить как обои",
 	contextMenuShowPackageContent = "Показать содержимое пакета",
-	contextMenuShowContainingFolder = "Показать содержащую папку",
+	contextMenuShowContainingFolder = "Открыть содержащую папку",
 	contextMenuRemoveFromFavourites = "Удалить из избранного",
 
 	favourites = "Избранное",
@@ -33,6 +35,8 @@
 	hideFileFormat = "Скрывать формат файлов",
 	showHiddenFiles = "Показывать скрытые файлы",
 	hideHiddenFiles = "Скрывать скрытые файлы",
+	showApplicationIcons = "Показывать иконки приложений",
+	hideApplicationIcons = "Скрывать иконки приложений",
 
 	sortByTypeShort = "По типу",
 	sortByNameShort = "По имени",
