--- a/MineOS/Languages/English.lang
+++ b/MineOS/Languages/English.lang
@@ -4,6 +4,8 @@
 	screensaverDelay = "Delay",
 	screensaverDisabled = "Disabled",
 
+	areYouSure = "Are you sure?",
+	emptyTrash = "Empty trash"
 	type = "Type",
 	size = "Size",
 	date = "Date",
