--- a/Applications/MineCodeIDE/Localization/Russian.lang
+++ b/Applications/MineCodeIDE/Localization/Russian.lang
@@ -1,4 +1,10 @@
 {
+	gotoCyka = "Переход",
+	gotoEnd = "В конец",
+	gotoStart = "В начало",
+	pageDown = "На страницу ниже",
+	pageUp = "На страницу выше",
+	deleteLine = "Удалить текущую строку",
 	cursorProperties = "Параметры курсора",
 	cursorSymbol = "Символ",
 	cursorColor = "Цвет",
@@ -29,9 +35,9 @@
 	cut = "Вырезать",
 	copy = "Копировать",
 	paste = "Вставить",
-	selectAll = "Выбрать все",
+	selectAll = "Выделить все",
 	edit = "Редактировать",
-	comment = "Комментировать код",
+	comment = "Комментировать",
 	indent = "Табулировать",
 	unindent = "Детабулировать",
 }
